v21.07/en/_sources/modules.rst.txt
Software modules

The

rc_cube

 comes with several on-board software modules, each of which
corresponds to a certain functionality and can be interfaced via its
respective

node

 in the

REST-API interface

.

The

rc_cube

's software modules can be divided into

3D camera modules, Section \ref{camera_modules:sect-3d-camera-modules}
which acquire stereo image pairs and compute 3D depth information such
as disparity, error, and confidence images, and are also accessible
via the rc_cube's GigE Vision/GenICam interface,

Detection modules, Section \ref{detection_modules:sect-detection-
modules}  which provide a variety of detection functionalities, such
as grasp point computation and object detection,

Configuration modules, Section \ref{configuration_modules:sect-
configuration-modules}  which enable the user to configure the rc_cube
for specific applications.

