v22.04/en/_sources/modules.rst.txt
Software modules

The

rc_cube

 comes with several on-board software modules, each of which
corresponds to a certain functionality and can be interfaced via its
respective

node

 in the

REST-API interface

.

The

rc_cube

 offers the possibility to connect multiple 3D cameras such as the

rc_visard

. The image data from each device is processed in a separate

camera pipeline

, which consists of several different software modules. The modules
inside each pipeline are pipeline specific, which means that they can
have different parameters for each pipeline. The modules running
outside the pipelines are global and provide data for all modules in
all pipelines. An overview is given in

Fig. 9

.


The

rc_cube

's pipeline-specific software modules can be divided into

3D camera modules\:(Section \ref{camera_modules:sect-3d-camera-
modules})  which acquire image pairs and compute 3D depth information
such as disparity, error, and confidence images, and are also
accessible via the rc_cube's GigE Vision/GenICam interface,

Detection modules\:(Section \ref{detection_modules:sect-detection-
modules})  which provide a variety of detection functionalities, such
as grasp point computation and object detection,

Configuration modules\:(Section \ref{configuration_modules:sect-
configuration-modules})  which enable the user to perform calibrations
and configure the rc_cube for specific applications.

The modules that are global for all camera pipelines running on the

rc_cube

 are the

Database modules\:(Section \ref{database_modules:sect-database-
modules})  which enable the user to configure global data available to
all other modules, such as load carriers, regions of interest and
grippers.

